What's New for PSPRadio 
========================

0.38.05 (rxxx) (2006-02-10)
NEW FEATURES
BUG FIXES
(sandberg) 3DUI: Rewrote the textrendering of lists and options so only one event is sent, to make it more stable (r798)

0.38.04 (r797) (2006-02-10)
NEW FEATURES
(raf) Core: Now playlist entries are sorted by title if the playlist is v2. (r768)
BUG FIXES
(raf) Core: Made the decoding/playback more stable (r770)
(raf) Core: Now only UP/DOWN generate REPEATs (No more 'jumpy' START button, etc.)(r772)
(raf) Core: Now long press are also handled as a release (r773)
(raf) Core: Corrected erroneous button hits being sent continuosly when the power saving kicked off (r774)
(sandberg) 3DUI: Fixed a cacheproblem with the panels (r778)
(sandberg) 3DUI: Some of the gfxsizes setup in the configuration was used incorrect in the code (r779)
(raf) Core: Now buttons/hprm data is sent by value in the events - this could cause incorrect or erroneous data from being processed, based on timing. (r782)
(raf) Core: Eliminated possibility of certain race conditions from happening (when a stream ends). This should provide more stability/consistency on stream ends -- this applies mostly to local files. (r783)
(raf) Core: Now stream handling screen is assigned correctly when stream starts playing. (r784)
(raf) Core(OGG): Now stops parsing comments (metadata) from OGG file after TITLE and ARTIST have been retrieved. (this was causing random crashes) (r784)
(raf) Core: Corrected bug that could crash the app if the first thing the user did was NEXT or PREV with the HPRM. (r785)
(raf) All: Replaced unsafe strncpy globally with safe counterpart strlcpy().
(raf) Core: Cleanup to Driver initialization routines and system callbacks (power) (r789)
(raf) Core: Re-enabled HOME menu. (r789,790)
(sandberg) 3DUI: Fixed a memory error and removed some traces (to avoid context switches) (r792)